--- a/html/git.html
+++ b/html/git.html
@@ -18,7 +18,7 @@
             <li>git commit — сохранение изменений в Git.</li>
             <li>git status — просмотр списка измененных файлов. </li>
             <li>git init — создание нового репозитория Git в пустой директории.</li>
-            <li>git push — выгрузка сделанных изменений в удаленный репозиторий/</li>
+            <li>git push — выгрузка сделанных изменений в удаленный репозиторий.</li>
          </ul>
       </div>
       <!--footer-->
